--- a/src/main/resources/CSS/styles.css
+++ b/src/main/resources/CSS/styles.css
@@ -78,5 +78,14 @@
     -fx-background-color: #6c6c6c;
 }
 
+.botonMenu{
+    -fx-cursor: hand;
+}
+
+.botonMenu:hover {
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+    -fx-transition: all 0.5s ease;
+}
 
 
