--- a/src/main/resources/org/example/MainScreen.fxml
+++ b/src/main/resources/org/example/MainScreen.fxml
@@ -162,7 +162,7 @@
                   <Font name="Consolas" size="16.0" />
                </font>
             </Button>
-            <ImageView fx:id="imagenMenu" fitHeight="30.0" fitWidth="37.0" layoutX="14.0" layoutY="3.0" onMouseClicked="#abrirMenu" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imagenMenu" fitHeight="30.0" fitWidth="37.0" layoutX="14.0" layoutY="3.0" onMouseClicked="#abrirMenu" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;" styleClass="botonMenu">
                <image>
                   <Image url="@../../Images/iconoMenu.png" />
                </image>
