--- a/src/main/resources/org/example/ForgottenPassword.fxml
+++ b/src/main/resources/org/example/ForgottenPassword.fxml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.controller.ForgottenPasswordController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="537.0" prefWidth="499.0" style="-fx-background-color: #8093ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ForgottenPasswordController">
+   <children>
+      <ImageView fitHeight="167.0" fitWidth="181.0" layoutX="166.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../Images/Logo.png" />
+         </image>
+      </ImageView>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="38.0" layoutY="226.0" prefHeight="43.0" prefWidth="423.0" text="Recuperación de contraseña">
+         <font>
+            <Font name="Consolas Bold" size="28.0" />
+         </font>
+      </Label>
+      <ImageView fx:id="flechaAtras" fitHeight="80.0" fitWidth="63.0" layoutX="25.0" layoutY="36.0" onMouseClicked="#irAtras" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
+         <image>
+            <Image url="@../../Images/FlechaAtras-removebg-preview.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="textFieldCorreoRecuperacion" layoutX="217.0" layoutY="334.0" prefHeight="26.0" prefWidth="234.0" promptText="Introduzca su correo electrónico" style="-fx-background-radius: 5px; -fx-background-color: #FFFFFF;">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </TextField>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="325.0" prefHeight="43.0" prefWidth="151.0" text="Correo electrónico">
+         <font>
+            <Font name="Consolas Bold" size="14.0" />
+         </font>
+      </Label>
+      <Button fx:id="botonAceptarRecuperacion" layoutX="326.0" layoutY="449.0" maxHeight="37.0" mnemonicParsing="false" onAction="#aceptarRecuperacion" prefHeight="37.0" prefWidth="104.0" stylesheets="@../../CSS/styles.css" text="Aceptar">
+         <styleClass>
+            <String fx:value="botonIniciarSesion" />
+            <String fx:value="botonazo" />
+         </styleClass>
+      </Button>
+      <Button fx:id="botonCancelar" layoutX="95.0" layoutY="449.0" maxHeight="37.0" mnemonicParsing="false" onAction="#cancelar" prefHeight="37.0" prefWidth="104.0" stylesheets="@../../CSS/styles.css" text="Cancelar">
+         <styleClass>
+            <String fx:value="botonIniciarSesion" />
+            <String fx:value="botonazo" />
+         </styleClass>
+      </Button>
+   </children>
 </AnchorPane>
