--- a/src/main/resources/org/example/LogIn.fxml
+++ b/src/main/resources/org/example/LogIn.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -10,27 +11,52 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #8789C0;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.LogInController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #8093ea; -fx-background-radius: 20px;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.LogInController">
    <children>
-      <TextField fx:id="textFieldUsuarioe" layoutX="472.0" layoutY="204.0" prefHeight="26.0" prefWidth="250.0" promptText="Introduzca su usuario" style="-fx-background-radius: 5px;" />
-      <PasswordField fx:id="passwordFieldClave" layoutX="472.0" layoutY="314.0" prefHeight="26.0" prefWidth="250.0" promptText="Introduzca su contraseña" style="-fx-background-radius: 5px;" />
-      <Label layoutX="474.0" layoutY="168.0" prefHeight="26.0" prefWidth="60.0" text="Usuario:" />
-      <Label layoutX="472.0" layoutY="284.0" text="Contraseña:" />
-      <Button fx:id="botonClaveOlvidada" layoutX="472.0" layoutY="358.0" mnemonicParsing="false" onAction="#recuperarClave" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="¿Olvidó su contraseña?" textFill="#1e00ff">
+      <TextField fx:id="textFieldUsuario" layoutX="474.0" layoutY="225.0" prefHeight="26.0" prefWidth="266.0" promptText="Introduzca su usuario" style="-fx-background-radius: 5px; -fx-background-color: #FFFFFF;" styleClass="textFieldInicio" stylesheets="@../../CSS/styles.css">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></TextField>
+      <PasswordField fx:id="passwordFieldClave" layoutX="474.0" layoutY="322.0" prefHeight="26.0" prefWidth="266.0" promptText="Introduzca su contraseña" style="-fx-background-radius: 5px; -fx-background-color: #FFFFFF;">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font></PasswordField>
+      <Label layoutX="474.0" layoutY="191.0" prefHeight="26.0" prefWidth="97.0" text="Usuario:">
+         <font>
+            <Font name="Consolas Bold" size="18.0" />
+         </font></Label>
+      <Label layoutX="474.0" layoutY="289.0" text="Contraseña:">
+         <font>
+            <Font name="Consolas Bold" size="18.0" />
+         </font></Label>
+      <Button fx:id="botonClaveOlvidada" layoutX="561.0" layoutY="369.0" mnemonicParsing="false" onAction="#recuperarClave" prefHeight="28.0" prefWidth="178.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="¿Olvidó su contraseña?" textFill="#1e00ff" underline="true">
          <tooltip>
             <Tooltip text="Haga clic para abrir el gestor de recuperación de contraseñas" />
          </tooltip>
+         <font>
+            <Font name="Calibri Bold" size="14.0" />
+         </font>
       </Button>
-      <ImageView fitHeight="336.0" fitWidth="316.0" layoutX="64.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="332.0" fitWidth="333.0" layoutX="68.0" layoutY="118.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../Images/Logo.png" />
          </image>
       </ImageView>
-      <Button fx:id="iniciarSesion" layoutX="597.0" layoutY="449.0" mnemonicParsing="false" onAction="#iniciarSesion" prefHeight="26.0" prefWidth="126.0" text="Iniciar Sesión" />
-      <Button fx:id="botonCerrar" layoutX="764.0" layoutY="-1.0" mnemonicParsing="false" onAction="#closeApp" prefHeight="26.0" prefWidth="36.0" style="-fx-background-color: red; -fx-font-weight: 700;" text="X" textFill="#fcfbfb">
-         <font>
-            <Font name="Consolas" size="16.0" />
-         </font>
+      <Button fx:id="iniciarSesion" layoutX="597.0" layoutY="476.0" mnemonicParsing="false" onAction="#iniciarSesion" prefHeight="26.0" prefWidth="126.0" stylesheets="@../../CSS/styles.css" text="Iniciar Sesión">
+         <styleClass>
+            <String fx:value="botonIniciarSesion" />
+            <String fx:value="botonazo" />
+         </styleClass></Button>
+      <Button fx:id="botonRegistrarse" layoutX="456.0" layoutY="476.0" mnemonicParsing="false" onAction="#iniciarRegistro" prefHeight="26.0" prefWidth="126.0" stylesheets="@../../CSS/styles.css" text="Registrarse">
+         <styleClass>
+            <String fx:value="botonIniciarSesion" />
+            <String fx:value="botonazo" />
+         </styleClass>
       </Button>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="183.0" layoutY="38.0" prefHeight="43.0" prefWidth="466.0" text="Monitoreo de Servidores">
+         <font>
+            <Font name="Consolas Bold Italic" size="36.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
