--- a/src/main/resources/Jasper/reporte.jrxml
+++ b/src/main/resources/Jasper/reporte.jrxml
@@ -1,80 +1,171 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.20.6.final using JasperReports Library version 6.20.6-5c96b6aa8a39ac1dc6b6bea4b81168e16dd39231  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports"
-              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd"
-              name="alertas" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20"
-              topMargin="20" bottomMargin="20" uuid="dd5b57c1-68f2-4609-9588-662450085dc4">
-    <queryString>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Servidores" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9005ee80-c99d-4360-af1d-c8fb238a5606">
+    <property name="com.jaspersoft.studio.data.defaultdataadapter" value="New Data Adapter"/>
+    <queryString language="csv">
         <![CDATA[]]>
     </queryString>
+    <field name="alias" class="java.lang.String"/>
+    <field name="alerta" class="java.lang.String"/>
+    <field name="valor" class="java.lang.Double"/>
+    <variable name="RAMCount" class="java.lang.Integer" calculation="Count">
+        <variableExpression><![CDATA[$F{alerta}.equals("RAM") ? $F{alerta} : null]]></variableExpression>
+    </variable>
+    <variable name="CPUCount" class="java.lang.Integer" calculation="Count">
+        <variableExpression><![CDATA[$F{alerta}.equals("CPU") ? $F{alerta} : null]]></variableExpression>
+    </variable>
+    <variable name="RedCount" class="java.lang.Integer" calculation="Count">
+        <variableExpression><![CDATA[$F{alerta}.equals("Red") ? $F{alerta} : null]]></variableExpression>
+    </variable>
     <background>
         <band splitType="Stretch"/>
     </background>
     <title>
-        <band height="92" splitType="Stretch">
+        <band height="84" splitType="Stretch">
+            <rectangle radius="10">
+                <reportElement mode="Opaque" x="-10" y="2" width="569" height="80" forecolor="#000000" backcolor="#04030F" uuid="a56be95c-51af-472f-a49d-f0b1a2c9ac43"/>
+                <graphicElement>
+                    <pen lineWidth="3.0" lineColor="#1F4EF8"/>
+                </graphicElement>
+            </rectangle>
             <staticText>
-                <reportElement mode="Opaque" x="0" y="30" width="560" height="30" backcolor="#FFFFFF"
-                               uuid="f92eaf73-3f5e-490c-a55d-f91298003bdc"/>
-                <box>
-                    <pen lineWidth="0.5" lineColor="#1F4EF8"/>
-                </box>
-                <textElement textAlignment="Center">
-                    <font fontName="Consolas" size="24" isBold="true" isItalic="true"/>
+                <reportElement mode="Opaque" x="65" y="20" width="419" height="51" backcolor="#1F4EF8" uuid="c1c156d1-682b-4d74-aea6-a2e98ef616bf"/>
+                <textElement textAlignment="Center" verticalAlignment="Middle">
+                    <font fontName="Consolas" size="26" isBold="true" isItalic="true"/>
                 </textElement>
                 <text><![CDATA[Monitoreo de Servidores]]></text>
             </staticText>
         </band>
     </title>
     <columnHeader>
-        <band height="67" splitType="Stretch">
+        <band height="58" splitType="Stretch">
+            <rectangle>
+                <reportElement x="-10" y="-5" width="569" height="55" backcolor="#8093EA" uuid="33b0c5b2-35b2-4254-a591-6c468b965b78"/>
+                <graphicElement>
+                    <pen lineWidth="2.0" lineColor="#1F4EF8"/>
+                </graphicElement>
+            </rectangle>
             <staticText>
-                <reportElement x="0" y="20" width="170" height="30" uuid="efef687a-93c9-42d5-a1bb-9afd48f419e4"/>
-                <textElement textAlignment="Center">
-                    <font fontName="Consolas" size="16"/>
+                <reportElement mode="Opaque" x="0" y="7" width="185" height="30" uuid="38c679d1-e067-46df-892b-b478d192172f">
+                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6fedd802-a3ad-41a4-81de-d43324264c62"/>
+                </reportElement>
+                <box>
+                    <pen lineWidth="0.25"/>
+                    <topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+                    <leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+                    <bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+                    <rightPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+                </box>
+                <textElement textAlignment="Center" verticalAlignment="Middle">
+                    <font fontName="Consolas" size="16" isBold="true"/>
                 </textElement>
-                <text><![CDATA[Nombre del Servidor]]></text>
+                <text><![CDATA[Alias del Servidor]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="220" y="18" width="140" height="30"
-                               uuid="d8479d2c-775a-477c-835e-e99b8ae55260"/>
-                <textElement textAlignment="Center" rotation="None">
-                    <font fontName="consolas&#xD;&#xA;" size="16"/>
+                <reportElement mode="Opaque" x="190" y="7" width="185" height="30" uuid="5a7fb52e-acb7-4a4b-a4d6-b2bd8ca6c8de">
+                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4742bec9-5f88-4a8b-bcc4-3084e46275a5"/>
+                </reportElement>
+                <box>
+                    <pen lineWidth="0.25"/>
+                    <topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+                    <leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+                    <bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+                    <rightPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+                </box>
+                <textElement textAlignment="Center" verticalAlignment="Middle">
+                    <font fontName="Consolas" size="16" isBold="true"/>
                 </textElement>
                 <text><![CDATA[Tipo de Alerta]]></text>
             </staticText>
             <staticText>
-                <reportElement x="430" y="20" width="100" height="30" uuid="c00830e8-1acc-40eb-8bfd-2c5f85318d2f"/>
-                <textElement textAlignment="Center">
-                    <font fontName="Consolas" size="16"/>
+                <reportElement mode="Opaque" x="380" y="7" width="170" height="30" uuid="762df734-55e9-426d-812f-ea0e7d53bd11">
+                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ae1d964e-90bc-44cc-a0ed-4f88ceb0d346"/>
+                </reportElement>
+                <box>
+                    <pen lineWidth="0.25"/>
+                    <topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+                    <leftPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+                    <bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+                    <rightPen lineWidth="0.25" lineStyle="Solid" lineColor="#000000"/>
+                </box>
+                <textElement textAlignment="Center" verticalAlignment="Middle">
+                    <font fontName="Consolas" size="16" isBold="true" isItalic="false"/>
                 </textElement>
-                <text><![CDATA[Valor]]></text>
+                <text><![CDATA[valor]]></text>
             </staticText>
         </band>
     </columnHeader>
     <detail>
-        <band height="20">
+        <band height="39" splitType="Stretch">
+            <rectangle>
+                <reportElement x="-10" y="-10" width="569" height="49" backcolor="#B2DAFA" uuid="c9b29eeb-3229-4069-a566-4c395d525e2a"/>
+                <graphicElement>
+                    <pen lineWidth="2.0" lineColor="#1F4EF8"/>
+                </graphicElement>
+            </rectangle>
             <textField>
-                <reportElement x="0" y="0" width="170" height="20"/>
-                <textFieldExpression class="java.lang.String"><![CDATA[$F{alias}]]></textFieldExpression>
+                <reportElement x="0" y="0" width="185" height="30" uuid="f47e9f2d-ec88-410d-8548-1498e8732092">
+                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6fedd802-a3ad-41a4-81de-d43324264c62"/>
+                </reportElement>
+                <textElement textAlignment="Center" verticalAlignment="Middle"/>
+                <textFieldExpression><![CDATA[$F{alias}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="220" y="0" width="140" height="20"/>
-                <textFieldExpression class="java.lang.String"><![CDATA[$F{alerta}]]></textFieldExpression>
+                <reportElement x="185" y="0" width="185" height="30" uuid="2cb17801-6b45-4a91-9621-87daf845474d">
+                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4742bec9-5f88-4a8b-bcc4-3084e46275a5"/>
+                </reportElement>
+                <textElement textAlignment="Center" verticalAlignment="Middle"/>
+                <textFieldExpression><![CDATA[$F{alerta}]]></textFieldExpression>
             </textField>
-            <textField>
-                <reportElement x="430" y="0" width="100" height="20"/>
-                <textFieldExpression class="java.lang.Double"><![CDATA[$F{valor}]]></textFieldExpression>
+            <textField pattern="#,##">
+                <reportElement x="380" y="0" width="171" height="30" uuid="43c08bd4-14c0-4da5-844d-8bd5804a2e24">
+                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ae1d964e-90bc-44cc-a0ed-4f88ceb0d346"/>
+                </reportElement>
+                <textElement textAlignment="Center" verticalAlignment="Middle"/>
+                <textFieldExpression><![CDATA[$F{valor}]]></textFieldExpression>
             </textField>
         </band>
     </detail>
-    <columnFooter>
-        <band height="45" splitType="Stretch"/>
-    </columnFooter>
-    <pageFooter>
-        <band height="54" splitType="Stretch"/>
-    </pageFooter>
     <summary>
-        <band height="42" splitType="Stretch"/>
+        <band height="305" splitType="Stretch">
+
+            <barChart>
+                <chart evaluationTime="Report">
+                    <reportElement x="150" y="20" width="200" height="200" uuid="00da2706-4bc8-4fd2-82f4-e3cb343e6cf6"/>
+                    <chartTitle>
+                        <titleExpression><![CDATA["Cantidad de alertas por tipo y servidor"]]></titleExpression>
+                    </chartTitle>
+                    <chartSubtitle/>
+                    <chartLegend/>
+                </chart>
+                <categoryDataset>
+                    <categorySeries>
+                        <seriesExpression><![CDATA["RAM"]]></seriesExpression>
+                        <categoryExpression><![CDATA[$F{alias}]]></categoryExpression>
+                        <valueExpression><![CDATA[$V{RAMCount}]]></valueExpression>
+                    </categorySeries>
+                    <categorySeries>
+                        <seriesExpression><![CDATA["CPU"]]></seriesExpression>
+                        <categoryExpression><![CDATA[$F{alias}]]></categoryExpression>
+                        <valueExpression><![CDATA[$V{CPUCount}]]></valueExpression>
+                    </categorySeries>
+                    <categorySeries>
+                        <seriesExpression><![CDATA["Red"]]></seriesExpression>
+                        <categoryExpression><![CDATA[$F{alias}]]></categoryExpression>
+                        <valueExpression><![CDATA[$V{RedCount}]]></valueExpression>
+                    </categorySeries>
+                </categoryDataset>
+                <barPlot>
+                    <plot/>
+                    <itemLabel/>
+                    <categoryAxisFormat>
+                        <axisFormat labelColor="#000000" tickLabelColor="#000000" axisLineColor="#000000"/>
+                    </categoryAxisFormat>
+                    <valueAxisFormat>
+                        <axisFormat labelColor="#000000" tickLabelColor="#000000" axisLineColor="#000000"/>
+                    </valueAxisFormat>
+                </barPlot>
+            </barChart>
+        </band>
     </summary>
 </jasperReport>
